--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,9 @@ body {
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
 }
+/* ------------------------------------------------------- */
+/* ----------------------------1--------------------------- */
+/* -------------------------------------------------------- */
 
 header{
     color: white;
@@ -108,16 +111,169 @@ header .hero-text-box hr {
     position: absolute;
     bottom: 30px;
     left: 50%;
-    margin-left: -29px;
-    display: block;
-    height: 42px;
-    width: 42px;
-    font-size: 42px;
     line-height: 42px;
     color: #fff;
-    border-radius: 100%;
+    
+}
+
+/* ------------------------------------------------------- */
+/* -----------------------------2------------------------- */
+/* ------------------------------------------------------- */
+
+
+
+.about-section{
+    background-color: rgb(46, 45, 45);
+    padding-top: 6%;
+    
+}
+
+.Profile-image img {
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+    margin-right: 6%;
+    margin-left: 20%;
+    
+    float: left;
+}
+
+.About-text h2{
+    font-size: 130%;
+    color: white;
+    word-spacing: 5px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    
+}
+
+.About-text p{
+    margin-bottom: 10px;
+    font-size: 90%;
+    width: 93%;
+    padding: 5px;
+    word-spacing: 5px;
+    letter-spacing: 2px;
+    line-height: 22px;
 }
 
 
+.contact-details{
+    margin-left: 37.5%;
+    margin-top: -4%;
+    padding-bottom: 6%;
+}
+
+
+.btn-primary{
+    background-color: aqua;
+    letter-spacing: 2px;
+    border: 15px solid aqua;
+    color: rgb(119, 115, 115);
+    font-size: 80%;
+    margin-left: 35%;
+    border-radius: 7px;
+    font: bold;
+}
+
+
+
+/* ------------------------------------------------------- */
+/* -----------------------------3.1------------------------- */
+/* ------------------------------------------------------- */
+
+.schooling h1{
+    font-size: 100%;
+    text-transform: uppercase;
+    color: black;
+    float: left;
+    letter-spacing: -0.2px;
+    margin: 16%;
+    border-bottom: 3px solid #e67e22;
+    padding-bottom: 5px;
+    margin-top: 50px;
+
+}
+
+.row-item h3{
+    color: black;
+    font-size: 130%;
+    padding-top: 45px;
+    margin-left: -1px;
+    
+}
+
+.row-item p{
+    color: rgb(61, 60, 60);
+    font-size: 85%;
+    padding-top: 10px;
+    width: 85%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.row-items h3{
+    color: black;
+    font-size: 130%;
+    padding-top: 45px;
+}
+
+.row-items p{
+    color: rgb(61, 60, 60);
+    font-size: 85%;
+    padding-top: 15px;
+    padding-bottom: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+
+.extra{
+    margin-left: 39.7%;
+}
+
+.extra strong{
+    font-size: 85%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+.row-education hr{
+    margin-left: 20%;
+    width: 60%;
+}
+
+
+/* ------------------------------------------------------- */
+/* -----------------------------3.2------------------------- */
+/* ------------------------------------------------------- */
+
+.skills h1{
+    font-size: 100%;
+    text-transform: uppercase;
+    color: black;
+    float: left;
+    letter-spacing: -0.2px;
+    margin: 16%;
+    margin-right: 20%;
+    border-bottom: 3px solid #e67e22;
+    padding-bottom: 5px;
+    margin-top: 50px;
+}
+
+
+.row-skill p{
+    color: rgb(61, 60, 60);
+    font-size: 85%;
+    width: 85%;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;  
+}
+
+.bar ul{
+    float: left;
+    margin: 10px;
+    font-size: 100%;
+}
 
 
