--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,30 +13,35 @@ body {
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
 }
+
+
+
+
 /* ------------------------------------------------------- */
 /* ----------------------------1--------------------------- */
 /* -------------------------------------------------------- */
 
+
+
+
+
 header{
     color: white;
-    background-image: url(/images/header-background.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/1.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
 }
-
 .nav-bar {
     text-align: center;
+    position: ;
 }
-
 .nav-bar li {
     display: inline-block;
     margin: 40px;
-    margin-top: 10px;
-    
+    margin-top: 10px;   
 }
-
 .nav-bar li a:link,
 .nav-bar li a:visited {
     padding: 8px 0;
@@ -47,12 +52,10 @@ header{
     border-bottom: 2px, solid, transparent;
     transition: border-bottom 0.2s;
 }
-
 .nav-bar li a:hover,
 .nav-bar li a:active {
     border-bottom: 3px solid #e67e22;
 }
-
 h1{
     font-size: 90px;
     text-align: center;
@@ -60,7 +63,6 @@ h1{
     word-spacing: 8px;
     letter-spacing: 3px;
 }
-
 h3{
     font-size: 20px;
     text-align: center;
@@ -69,52 +71,57 @@ h3{
     width: 50%;
     margin-left: 25%;
     color: rgb(167, 164, 164);
-    word-spacing: 4px;
-    
+    word-spacing: 4px;   
 }
-
 h3 span{
     color: white;
 }
-
 h3 a:link,
 h3 a:visited{
     text-decoration: none;
    color: white;
-
 }
-
 header .hero-text-box hr {
     width: 40%;
     margin-left: 30%;
     margin-top: 18px;
     border-color: rgba(73, 69, 69, 0.3);
 }
-
 .row {
     margin-left: 38%;
     margin-top: 25px;
     font-size: 160%;
 }
-
 .row i{
     margin-left: 40px;
 }
-
 .row a:link,
 .row a:visited{
     text-decoration: none;
    color: white;
 }
-
 .about-arrow a {
     position: absolute;
     bottom: 30px;
     left: 50%;
     line-height: 42px;
     color: #fff;
-    
 }
+.about-arrow a:link,
+.about-arrow a:visited{
+    text-decoration: none;
+    border: 3px solid white;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    color: black;
+    padding-left: 9px;
+    padding-top: 6px;
+    background-color: white;
+    font-size: 130%;
+}
+
+
 
 /* ------------------------------------------------------- */
 /* -----------------------------2------------------------- */
@@ -124,29 +131,23 @@ header .hero-text-box hr {
 
 .about-section{
     background-color: rgb(46, 45, 45);
-    padding-top: 6%;
-    
+    padding-top: 6%;   
 }
-
 .Profile-image img {
     height: 180px;
     width: 180px;
     border-radius: 50%;
     margin-right: 6%;
     margin-left: 20%;
-    
     float: left;
 }
-
 .About-text h2{
     font-size: 130%;
     color: white;
     word-spacing: 5px;
     letter-spacing: 2px;
     margin-bottom: 10px;
-    
 }
-
 .About-text p{
     margin-bottom: 10px;
     font-size: 90%;
@@ -156,15 +157,11 @@ header .hero-text-box hr {
     letter-spacing: 2px;
     line-height: 22px;
 }
-
-
 .contact-details{
     margin-left: 37.5%;
     margin-top: -4%;
     padding-bottom: 6%;
 }
-
-
 .btn-primary{
     background-color: aqua;
     letter-spacing: 2px;
@@ -178,9 +175,14 @@ header .hero-text-box hr {
 
 
 
+
+
 /* ------------------------------------------------------- */
 /* -----------------------------3.1------------------------- */
 /* ------------------------------------------------------- */
+
+
+
 
 .schooling h1{
     font-size: 100%;
@@ -192,17 +194,13 @@ header .hero-text-box hr {
     border-bottom: 3px solid #e67e22;
     padding-bottom: 5px;
     margin-top: 50px;
-
 }
-
 .row-item h3{
     color: black;
     font-size: 130%;
     padding-top: 45px;
     margin-left: -1px;
-    
 }
-
 .row-item p{
     color: rgb(61, 60, 60);
     font-size: 85%;
@@ -210,13 +208,11 @@ header .hero-text-box hr {
     width: 85%;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
 .row-items h3{
     color: black;
     font-size: 130%;
     padding-top: 45px;
 }
-
 .row-items p{
     color: rgb(61, 60, 60);
     font-size: 85%;
@@ -224,28 +220,28 @@ header .hero-text-box hr {
     padding-bottom: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-
-
 .extra{
     margin-left: 39.7%;
 }
-
 .extra strong{
     font-size: 85%;
     font-family: Georgia, 'Times New Roman', Times, serif;
-
 }
-
 .row-education hr{
     margin-left: 20%;
     width: 60%;
 }
 
 
+
+
 /* ------------------------------------------------------- */
 /* -----------------------------3.2------------------------- */
 /* ------------------------------------------------------- */
+
+
+
+
 
 .skills h1{
     font-size: 100%;
@@ -259,8 +255,6 @@ header .hero-text-box hr {
     padding-bottom: 5px;
     margin-top: 50px;
 }
-
-
 .row-skill p{
     color: rgb(61, 60, 60);
     font-size: 85%;
@@ -269,11 +263,175 @@ header .hero-text-box hr {
     padding-bottom: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;  
 }
-
 .bar ul{
     float: left;
     margin: 10px;
     font-size: 100%;
 }
+.bar ul li p{
+    font-size: 80%;
+}
+.bar-right {
+    margin-left: 15%;
+}
+.bar-left{
+    margin-left: -100%;
+}
+
+
+
+/* ------------------------------------------------------- */
+/* -----------------------------4------------------------- */
+/* ------------------------------------------------------- */
+
+
+
+
+
+.project {
+    background-color: rgb(206, 202, 202);
+    margin-top: 24%;
+}
+.project h1{
+    font-size: 90%;
+    padding-top: 60px;
+    letter-spacing: 1.5px;
+    word-spacing: 3px;
+    text-transform: uppercase;
+    color: black;
+}
+.omnifood img{
+    width: 300px;
+    margin-top: 5%;
+    margin-left: 39.5%;
+    border: 5px solid #b8b5b5;
+    margin-bottom: 50px;
+}
+
+
+
+
+
+/* ------------------------------------------------------- */
+/* -----------------------------5------------------------- */
+/* ------------------------------------------------------- */
+
+
+
+
+
+#slider input[type=radio]{
+    display: none;
+}
+#slide1:checked ~ #slides .inner{
+    margin-left: 0;
+}
+#slide2:checked ~ #slides .inner{
+    margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner{
+    margin-left: -200%;
+}
+#slides .inner {
+    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+    width: 400%;
+    height: 350px;
+}
+#slides .slide{
+    width: 25%;
+    float: left;
+    height: 100%;
+    padding-bottom: 7%;
+}
+#bulletes{
+   
+    text-align: center;
+}
+#bulletes label{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background: #ccc;
+    margin:  0 10px;
+}
+.slide-content h1{
+    margin-top: 3%;
+    margin-left: -55%;
+    font-size: 150px;
+    color: white;
+    font-family: 'librebaskerville-italic', serif;
+}
+.slide-content p{
+    color: white;
+    font-family: 'librebaskerville-italic', serif;
+    font-size: 24px;
+    line-height: 48px;
+    padding: 30px;
+    margin-left: 25%;
+    margin-top: -90px;
+}
+.slide-content h6{
+    color: white;
+    font-family: 'librebaskerville-italic', serif;
+    margin-left: 27%;
+}
+#overflow{
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/1.jpg); 
+    background-size: cover;
+    background-position: center;
+    padding-bottom: 50px;
+}
+
+
+
+
+/* ------------------------------------------------------- */
+/* -----------------------------6------------------------- */
+/* ------------------------------------------------------- */
+
+
+
+
+footer{
+    background-color: rgb(46, 45, 45);
+    padding-bottom: 8%;
+    padding-top:3%;
+}
+
+.arrow-up i{
+  padding-top: -5%;
+  margin-bottom: 30%;
+}
+.about-arrow-up a:link,
+.about-arrow-up a:visited{
+   color: rgb(46, 45, 45);
+   text-decoration: none;
+   margin-left: 50%;
+   padding-top: -50%;
+   border: 8px solid white;
+   border-radius: 100%;
+   width: 120px;
+   height: 120px;
+   background-color: white;
+   font-size: 130%;
+
+}
+
+.icons{
+    margin-top: 100px;
+    text-align: center;
+}
+.icons a{
+    color: white;
+    text-decoration: none;
+    margin-left: 40px;
+    font-size: 180%;
+
+}
+
+
+
 
 
