--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,15 +35,14 @@ header{
 }
 .nav-bar {
     text-align: center;
-    position: ;
 }
-.nav-bar li {
+.main-nav li {
     display: inline-block;
     margin: 40px;
     margin-top: 10px;   
 }
-.nav-bar li a:link,
-.nav-bar li a:visited {
+.main-nav li a:link,
+.main-nav li a:visited {
     padding: 8px 0;
     color: white;
     text-decoration: none;
@@ -52,8 +51,8 @@ header{
     border-bottom: 2px, solid, transparent;
     transition: border-bottom 0.2s;
 }
-.nav-bar li a:hover,
-.nav-bar li a:active {
+.main-nav li a:hover,
+.main-nav li a:active {
     border-bottom: 3px solid #e67e22;
 }
 h1{
@@ -121,6 +120,16 @@ header .hero-text-box hr {
     font-size: 130%;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(22, 21, 21, 0.98);
+    box-shadow: 0 2px 2px rgba(46, 44, 44, 0.98);
+    z-index: 9999;
+    font-size: 80%;
+}
 
 
 /* ------------------------------------------------------- */
